--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/back5"
+    android:background="@drawable/back_final"
     android:gravity="center"
     android:padding="40dp">
 
@@ -19,10 +19,11 @@
         android:src="@drawable/ic_ico_high" />
 
     <TextView
+        android:id="@+id/splash_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_below="@id/text_app_name"
+        android:layout_marginTop="20dp"
         android:gravity="center|bottom"
         android:text="@string/spot_mylaundry"
         android:textAppearance="?android:attr/textAppearanceLarge"
