--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -41,15 +42,23 @@
             android:layout_margin="10dp"
             android:src="@drawable/ic_ico_high" />
 
-        <TextView
-            android:id="@+id/textView_about"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:text="@string/about"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+        <com.bluejamesbond.text.DocumentView
+            android:id="@+id/text_aboutus_justified"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:documentView_text="@string/user_agree"
+            app:documentView_textSize="18dp"
+            app:documentView_wordSpacingMultiplier="2.0" />
+
+        <!--<TextView-->
+        <!--android:id="@+id/textView_about"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:text="@string/about"-->
+        <!--android:textColor="@color/black"-->
+        <!--android:textSize="18sp" />-->
 
 
         <TextView
