12 August 1993 Perfect till now

--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -248,7 +248,7 @@
 
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/listView1_men"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_alignParentLeft="true"
@@ -263,8 +263,8 @@
         android:id="@+id/button_submit"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_alignRight="@+id/listView1"
-        android:layout_below="@+id/listView1"
+        android:layout_alignRight="@+id/listView1_men"
+        android:layout_below="@+id/listView1_men"
         android:layout_marginBottom="4dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/button_selector"
