--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -23,7 +23,7 @@
     <color name="list_divider">#33ffffff</color>
     <color name="text_dark_blue">#004765</color>
     <color name="brandColor">#f1c40f</color>
-    <color name="text_medium_blue">#ff208da9</color>
+    <color name="text_medium_blue">#208da9</color>
     <color name="topbar_back">#004765</color>
     <color name="drawer_backblue">#004765</color>
 
