--- a/app/src/main/res/layout/deal_listview.xml
+++ b/app/src/main/res/layout/deal_listview.xml
@@ -106,7 +106,7 @@
             <include layout="@layout/deal_list_divider" />
 
             <ListView
-                android:id="@+id/listView1"
+                android:id="@+id/listView1_men"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></ListView>
 
