--- a/app/src/main/res/layout/new_invoice.xml
+++ b/app/src/main/res/layout/new_invoice.xml
@@ -111,7 +111,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/listView1_men"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/button1"
