--- a/app/src/main/res/layout/new_order_history.xml
+++ b/app/src/main/res/layout/new_order_history.xml
@@ -76,7 +76,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/listView1_men"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/imageView_small_banner"
