--- a/app/src/main/res/layout/new_pick_up_address.xml
+++ b/app/src/main/res/layout/new_pick_up_address.xml
@@ -61,16 +61,17 @@
 
 
             <LinearLayout
-                android:id="@+id/tableRow2"
+                android:id="@+id/lin_tableRow2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingBottom="10dp">
 
                 <EditText
                     android:id="@+id/editText1"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edittextstyle"
+                    android:background="@drawable/edit_multiline"
                     android:ems="10"
                     android:minLines="3"
                     android:paddingLeft="2dp"
@@ -80,20 +81,26 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/tableRow2"
+                android:id="@+id/lin_tableRow3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageViewEdit1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                <Button
+                    android:id="@+id/buttonedit_pickup"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_vertical|left"
-                    android:background="@drawable/buttonstyle"
+                    android:background="@drawable/button_selector_img"
+                    android:drawableLeft="@drawable/ic_edit"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:src="@drawable/ic_action_edit" />
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:src="@drawable/ic_action_edit"
+                    android:text="EDIT"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
@@ -130,7 +137,8 @@
                     android:id="@+id/editText2"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edittextstyle"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/edit_multiline"
                     android:ems="10"
                     android:minLines="3"
                     android:paddingLeft="2dp"
@@ -143,15 +151,18 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageViewEdit2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                <Button
+                    android:id="@+id/button_edit2"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_vertical|left"
-                    android:background="@drawable/buttonstyle"
+                    android:background="@drawable/button_selector_img"
+                    android:drawableLeft="@drawable/ic_edit"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:src="@drawable/ic_action_edit" />
+                    android:src="@drawable/ic_action_edit"
+                    android:text="EDIT"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
@@ -162,9 +173,11 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/note_textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
                     android:text="Notes:"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="@color/text_color" />
@@ -172,7 +185,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/tableRow4"
+                android:id="@+id/lin_tableRow4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -181,11 +194,11 @@
                     android:id="@+id/editText3"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edittextstyle"
+                    android:background="@drawable/edit_multiline"
                     android:ems="10"
+                    android:gravity="top"
                     android:minLines="4"
-                    android:paddingLeft="2dp"
-                    android:paddingRight="2dp" />
+                    android:padding="5dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -197,14 +210,17 @@
 
                 <Button
                     android:id="@+id/button1"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="@dimen/btn_height"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="15dp"
                     android:background="#004765"
+                    android:drawableLeft="@android:drawable/stat_sys_upload_done"
                     android:gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:text="Finish order"
-                    android:textColor="@color/button_title_color" />
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
