18 August 1993 Good going

--- a/app/src/main/res/layout/fragmrnt_activity_main.xml
+++ b/app/src/main/res/layout/fragmrnt_activity_main.xml
@@ -2,10 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/bg">
+    android:background="@color/white">
 
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -42,17 +41,7 @@
             android:id="@+id/fragmentLeft"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-        <!--
-fragment
-    android:id="@+id/fragmentLeft"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignParentTop="true"
-    
-    android:name="com.spice.mziiki.MainViewerFragment" >
 
-</fragment
-        -->
     </RelativeLayout>
 
 </RelativeLayout>
