--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -59,8 +59,10 @@
     <color name="darkest_grey">#7c7c7c</color>
 
 
-    <color name="color_filledstar">#f1c40f</color> //check strings.xml this is just for annotation
-    <color name="color_emptystar">#77000000</color> //check strings.xml this is just for annotation
+    <color name="color_filledstar">#f1c40f</color>
+    //check strings.xml this is just for annotation
+    <color name="color_emptystar">#77000000</color>
+    //check strings.xml this is just for annotation
 
     <color name="text_color_grey">#777777</color>
     <color name="text_color_grey_dark">#878787</color>
