--- a/app/src/main/res/drawable/edit_multiline.xml
+++ b/app/src/main/res/drawable/edit_multiline.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="5dp"/>
-    <stroke android:color="@color/material_blue_grey_800" android:width="1.5dp"/>
+    <corners android:radius="5dp" />
+    <stroke
+        android:width="1.5dp"
+        android:color="@color/material_blue_grey_800" />
 </shape>
