--- a/app/src/main/res/drawable/edit_textplain_round.xml
+++ b/app/src/main/res/drawable/edit_textplain_round.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="5dp"/>
-    <gradient android:startColor="#bbffffff" android:endColor="#bbffffff"/>
+    <corners android:radius="5dp" />
+    <gradient
+        android:endColor="#bbffffff"
+        android:startColor="#bbffffff" />
 </shape>
