--- a/app/src/main/res/drawable/ratingfullempty.xml
+++ b/app/src/main/res/drawable/ratingfullempty.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true"
-        android:state_window_focused="true"
-        android:drawable="@drawable/rating_before" />
+    <item android:drawable="@drawable/rating_before" android:state_pressed="true" android:state_window_focused="true" />
 
-    <item android:state_focused="true"
-        android:state_window_focused="true"
-        android:drawable="@drawable/rating_before" />
+    <item android:drawable="@drawable/rating_before" android:state_focused="true" android:state_window_focused="true" />
 
-    <item android:state_selected="true"
-        android:state_window_focused="true"
-        android:drawable="@drawable/rating_before" />
+    <item android:drawable="@drawable/rating_before" android:state_selected="true" android:state_window_focused="true" />
 
     <item android:drawable="@drawable/rating_before" />
 
