--- a/app/src/main/res/layout/actionbarview.xml
+++ b/app/src/main/res/layout/actionbarview.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
     <ImageView
         android:layout_width="0dp"
@@ -14,6 +13,7 @@
         android:paddingRight="0dp"
         android:paddingTop="10dp"
         android:src="@drawable/ic_title_app" />
+
     <TextView
         android:id="@+id/action_title_custom"
         android:layout_width="0dp"
