--- a/app/src/main/res/layout/new_edit_address.xml
+++ b/app/src/main/res/layout/new_edit_address.xml
@@ -5,13 +5,13 @@
     android:background="@color/bgcolor">
 
     <!--<ImageView-->
-        <!--android:id="@+id/imageView_banner"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="70dp"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginTop="0dp"-->
-        <!--android:background="@drawable/list_row_background1"-->
-        <!--android:scaleType="fitXY" />-->
+    <!--android:id="@+id/imageView_banner"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="70dp"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginTop="0dp"-->
+    <!--android:background="@drawable/list_row_background1"-->
+    <!--android:scaleType="fitXY" />-->
 
     <ImageView
         android:id="@+id/imageView_small_banner"
@@ -24,18 +24,17 @@
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_height="wrap_content"
         android:layout_above="@+id/imageView_small_banner"
+        android:layout_alignParentTop="true"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        >
+        android:paddingRight="10dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
@@ -159,11 +158,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_from_spin">
-            <Spinner
-                android:id="@+id/spinner2"
-                android:layout_width="fill_parent"
-                android:layout_height="30dp"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <Spinner
+                    android:id="@+id/spinner2"
+                    android:layout_width="fill_parent"
+                    android:layout_height="30dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
 
             <TextView
@@ -209,13 +209,14 @@
 
                 <Button
                     android:id="@+id/bt_save"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="@dimen/btn_height"
                     android:layout_alignParentTop="true"
                     android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/button_selector"
+                    android:drawableLeft="@android:drawable/ic_menu_save"
                     android:gravity="center"
                     android:text="Save"
                     android:textColor="@color/button_title_color" />
