--- a/app/src/main/res/layout/new_rating.xml
+++ b/app/src/main/res/layout/new_rating.xml
@@ -9,24 +9,24 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:alpha=".7"
-        android:padding="10dp"
-        android:background="#000000" />
+        android:background="#000000"
+        android:padding="10dp" />
 
     <RelativeLayout
-        android:padding="15dp"
-        android:layout_margin="15dp"
         android:id="@+id/linearLayout1"
         android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@color/bgcolor">
+        android:layout_margin="15dp"
+        android:background="@color/bgcolor"
+        android:padding="15dp">
 
         <RelativeLayout
-            android:layout_marginBottom="5dp"
             android:id="@+id/linearLayout_online"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:gravity="center_vertical">
 
             <TextView
@@ -37,23 +37,24 @@
                 android:text="Value For Money :"
                 android:textColor="@color/text_color_grey"
                 android:textSize="15sp" />
+
             <RatingBar
-                android:layout_alignParentRight="true"
                 android:id="@+id/ratingbar_pricequality"
-                android:rating="3"
                 style="@style/StarRatingBar"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:layout_alignParentRight="true"
                 android:layout_gravity="right"
-                android:layout_width="wrap_content" />
+                android:rating="3" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_marginBottom="5dp"
             android:id="@+id/linearLayout_offline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout_online"
+            android:layout_marginBottom="5dp"
             android:gravity="center_vertical">
 
             <TextView
@@ -63,23 +64,23 @@
                 android:text="Service Quality :"
                 android:textColor="@color/text_color_grey"
                 android:textSize="15sp" />
+
             <RatingBar
-                android:layout_alignParentRight="true"
                 android:id="@+id/ratingbar_servicequality"
-                android:rating="3"
-                android:layout_gravity="right"
                 style="@style/StarRatingBar"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:layout_width="wrap_content" />
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:rating="3" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_marginBottom="5dp"
             android:id="@+id/linearLayout_offline1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout_offline"
-            >
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:id="@+id/textView11"
@@ -89,22 +90,23 @@
                 android:text="Punctuality:"
                 android:textColor="@color/text_color_grey"
                 android:textSize="15sp" />
+
             <RatingBar
                 android:id="@+id/ratingbar_pickupquality"
-                android:rating="3"
+                style="@style/StarRatingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="right"
-                style="@style/StarRatingBar"
-                android:layout_height="30dp"
-                android:layout_width="wrap_content" />
+                android:rating="3" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_marginBottom="5dp"
             android:id="@+id/linearLayout_offline2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout_offline1"
+            android:layout_marginBottom="5dp"
             android:gravity="center_vertical">
 
             <TextView
@@ -114,169 +116,169 @@
                 android:text="Staff Professionalism :"
                 android:textColor="@color/text_color_grey"
                 android:textSize="15sp" />
+
             <RatingBar
                 android:id="@+id/ratingbar_dropoffquality"
-                android:rating="3"
+                style="@style/StarRatingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="right"
-                style="@style/StarRatingBar"
-                android:layout_height="30dp"
-                android:layout_width="wrap_content" />
+                android:rating="3" />
         </RelativeLayout>
 
 
-
         <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_alignTop="@+id/linearLayout_online"-->
-            <!--android:layout_marginRight="5dp">-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignTop="@+id/linearLayout_online"-->
+        <!--android:layout_marginRight="5dp">-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star1"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_after" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star1"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_after" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star2"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:background="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star2"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:background="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star3"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star3"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star4"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star4"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star5"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star5"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
         <!--</LinearLayout>-->
 
         <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_alignTop="@+id/linearLayout_offline"-->
-            <!--android:layout_marginRight="5dp">-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignTop="@+id/linearLayout_offline"-->
+        <!--android:layout_marginRight="5dp">-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star11"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_after" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star11"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_after" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star12"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:background="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star12"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:background="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star13"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star13"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star14"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star14"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star15"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star15"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
         <!--</LinearLayout>-->
 
         <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_alignTop="@+id/linearLayout_offline1"-->
-            <!--android:layout_marginRight="5dp">-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignTop="@+id/linearLayout_offline1"-->
+        <!--android:layout_marginRight="5dp">-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star21"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_after" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star21"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_after" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star22"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:background="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star22"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:background="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star23"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star23"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star24"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star24"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star25"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star25"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
         <!--</LinearLayout>-->
 
         <!--<LinearLayout-->
-            <!--android:id="@+id/linearLayout2"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_alignTop="@+id/linearLayout_offline2"-->
-            <!--android:layout_marginRight="5dp">-->
+        <!--android:id="@+id/linearLayout2"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignTop="@+id/linearLayout_offline2"-->
+        <!--android:layout_marginRight="5dp">-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star31"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_after" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star31"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_after" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star32"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:background="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star32"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:background="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star33"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star33"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star34"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star34"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView_star35"-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/rating_before" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView_star35"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@drawable/rating_before" />-->
         <!--</LinearLayout>-->
 
         <EditText
@@ -286,8 +288,8 @@
             android:layout_below="@+id/linearLayout_offline2"
             android:background="@drawable/edit_multiline"
             android:ems="10"
-            android:hint="e.g \n&#160;&#160;&#160;always delivers \n&#160;&#160;&#160;on time"
             android:gravity="top|left"
+            android:hint="e.g \n&#160;&#160;&#160;always delivers \n&#160;&#160;&#160;on time"
             android:inputType="textMultiLine"
             android:padding="5dp"
             android:textColor="@color/text_medium_blue">
