--- a/app/src/main/res/layout/fragment_laundry.xml
+++ b/app/src/main/res/layout/fragment_laundry.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgcolor">
-
-
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
@@ -87,7 +85,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/imageView_banner"
         android:layout_marginTop="2dp"
-        android:divider="#00000000"
+        android:divider="@drawable/divider"
         android:dividerHeight="2dp">
 
     </ListView>
