--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -7,8 +7,9 @@
         android:id="@+id/direct_to_home"
         android:icon="@drawable/home"
         android:title="Home"
-        android:visible="false"
+        android:visible="true"
         app:showAsAction="always" />
+
 
 
 </menu>
