--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -17,6 +17,14 @@
         android:title="Search For"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/direct_to_home"
+        android:icon="@drawable/home"
+        android:title="Home"
+        android:visible="true"
+        app:showAsAction="always" />
+
+
     <!--<item-->
     <!--android:id="@+id/city_list"-->
     <!--android:icon="@drawable/dots"-->
