--- a/app/src/main/res/menu/main1.xml
+++ b/app/src/main/res/menu/main1.xml
@@ -11,5 +11,13 @@
         app:actionLayout="@layout/search_bar"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/direct_to_home"
+        android:icon="@drawable/home"
+        android:title="Home"
+        android:visible="true"
+        app:showAsAction="always" />
+
+
 
 </menu>
