--- a/app/src/main/res/layout/activity_laundry_detail.xml
+++ b/app/src/main/res/layout/activity_laundry_detail.xml
@@ -149,7 +149,7 @@
                         android:id="@+id/imageButton_rate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/third_b"
+                        android:background="@drawable/third"
                         android:onClick="ratePopup" />
 
                     <TextView
@@ -157,7 +157,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="@string/web"
+                        android:text="@string/rate"
                         android:textColor="@color/white"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -184,9 +184,11 @@
                     android:layout_alignParentLeft="true"
                     android:layout_margin="3dp"
                     android:background="@drawable/button_selector_expand"
-                    android:drawableLeft="@android:drawable/ic_menu_info_details"
+                    android:drawableLeft="@drawable/services"
                     android:onClick="expand"
-                    android:paddingRight="5dp"
+                    android:paddingRight="10dp"
+                    android:drawablePadding="5dp"
+                    android:paddingLeft="5dp"
                     android:text="SERVICES"
                     android:textColor="@color/btn_bgcolor_dark" />
 
