--- a/app/src/main/res/layout/choose_online_offline_popup.xml
+++ b/app/src/main/res/layout/choose_online_offline_popup.xml
@@ -12,12 +12,13 @@
         android:background="#000000" />
 
     <RelativeLayout
+        android:layout_margin="50dp"
         android:id="@+id/linearLayout1"
-        android:layout_width="250dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="#d3d3d3"
+        android:background="@drawable/ordertypepick_textplain_round"
         android:orientation="vertical"
         android:paddingBottom="20dp">
 
@@ -43,7 +44,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="10dp"
                 android:text="With Order Detail"
-                android:textColor="@color/text_color"
+                android:textColor="@color/darkest_grey"
                 android:textSize="18sp" />
 
         </LinearLayout>
@@ -71,7 +72,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="10dp"
                 android:text="Without Order Detail"
-                android:textColor="@color/text_color"
+                android:textColor="@color/darkest_grey"
                 android:textSize="18sp" />
 
         </LinearLayout>
