--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -23,6 +23,14 @@
         android:title="Home"
         android:visible="true"
         app:showAsAction="always" />
+    <item
+    android:id="@+id/cities"
+    android:title="Select City"
+    android:visible="false"
+    android:icon="@android:drawable/ic_menu_myplaces"
+    app:showAsAction="never"
+    />
+
 
 
     <!--<item-->
