26 August 1993 Running Perfectly till now except Home page white space sometime goes on fire. Working perfect till now.

--- a/app/src/main/res/layout/activity_laundry_detail.xml
+++ b/app/src/main/res/layout/activity_laundry_detail.xml
@@ -264,6 +264,7 @@
             android:id="@+id/button_pick_up_request"
             android:layout_width="140dp"
             android:layout_height="@dimen/btn_height"
+            android:drawableLeft="@drawable/pickup"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/map"
             android:layout_marginRight="5dp"
@@ -275,6 +276,7 @@
             android:textSize="15sp" />
 
         <Button
+            android:drawableLeft="@drawable/dollar"
             android:id="@+id/button1"
             android:layout_width="140dp"
             android:layout_height="@dimen/btn_height"
