--- a/app/src/main/res/layout/laundary_row.xml
+++ b/app/src/main/res/layout/laundary_row.xml
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:text="Name"
             android:textAllCaps="true"
-            android:textColor="@color/text_color"
+            android:textColor="@color/text_dark_blue"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -105,7 +105,7 @@
             android:layout_marginTop="4dp"
             android:text="Description"
             android:textAllCaps="true"
-            android:textColor="@color/text_color"
+            android:textColor="@color/darkest_grey"
             android:textSize="11sp"
             android:textStyle="bold" />
     </LinearLayout>
