26 August 1993 Running Perfectly till now except Home page white space sometime goes on fire. Working perfect till now.

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -66,4 +66,6 @@
 
     <color name="text_color_grey">#777777</color>
     <color name="text_color_grey_dark">#878787</color>
+    <color name="bg_deal_title">#77000000</color>
+    <color name="alfa_white">#aaffffff</color>
 </resources>
