--- a/app/src/main/res/layout/new_home_list_items.xml
+++ b/app/src/main/res/layout/new_home_list_items.xml
@@ -2,12 +2,14 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/bgcolor"
-    android:padding="5dp">
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="1dp">
 
     <ImageView
         android:id="@+id/img_off"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
+        android:layout_width="3dp"
+        android:layout_height="6dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/off"
         android:visibility="invisible" />
