1 September 2015 Running Perfectly till now except Home page white space sometime goes on fire. Working perfect till now.

--- a/app/src/main/res/layout/new_rating.xml
+++ b/app/src/main/res/layout/new_rating.xml
@@ -128,168 +128,16 @@
         </RelativeLayout>
 
 
-        <!--<LinearLayout-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignTop="@+id/linearLayout_online"-->
-        <!--android:layout_marginRight="5dp">-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star1"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_after" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star2"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:background="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star3"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star4"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star5"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-        <!--</LinearLayout>-->
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignTop="@+id/linearLayout_offline"-->
-        <!--android:layout_marginRight="5dp">-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star11"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_after" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star12"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:background="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star13"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star14"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star15"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-        <!--</LinearLayout>-->
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignTop="@+id/linearLayout_offline1"-->
-        <!--android:layout_marginRight="5dp">-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star21"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_after" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star22"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:background="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star23"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star24"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star25"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-        <!--</LinearLayout>-->
-
-        <!--<LinearLayout-->
-        <!--android:id="@+id/linearLayout2"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignTop="@+id/linearLayout_offline2"-->
-        <!--android:layout_marginRight="5dp">-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star31"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_after" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star32"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:background="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star33"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star34"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView_star35"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:src="@drawable/rating_before" />-->
-        <!--</LinearLayout>-->
 
         <EditText
             android:id="@+id/editText1"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout_offline2"
             android:background="@drawable/edit_multiline"
             android:ems="10"
             android:gravity="top|left"
-            android:hint="e.g \n&#160;&#160;&#160;always delivers \n&#160;&#160;&#160;on time"
+            android:hint="e.g Quick response time"
             android:inputType="textMultiLine"
             android:padding="5dp"
             android:textColor="@color/text_medium_blue">
