1 September 2015 Needs to work on show adds in Home or not and Show adds on deal or not

--- a/app/src/main/res/layout/new_edit_address.xml
+++ b/app/src/main/res/layout/new_edit_address.xml
@@ -204,6 +204,7 @@
             </LinearLayout>
 
             <RelativeLayout
+                android:paddingBottom="60dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -215,6 +216,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginBottom="70dp"
                     android:background="@drawable/button_selector"
                     android:drawableLeft="@android:drawable/ic_menu_save"
                     android:gravity="center"
