--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,6 +81,15 @@
         android:text="@string/rememberme"
         android:textSize="14sp" />
 
+    <TextView
+        android:padding="5dp"
+        android:text="Forgot password?"
+        android:textColor="#0000ff"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/but_submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
     <TextView
         android:id="@+id/textView_new_user"
