--- a/app/src/main/res/layout/new_add_address.xml
+++ b/app/src/main/res/layout/new_add_address.xml
@@ -18,7 +18,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="#aaffffff"
         android:paddingBottom="10dp"
         android:paddingTop="10dp">
 
