--- a/app/src/main/res/menu/menu_deals_intermediate.xml
+++ b/app/src/main/res/menu/menu_deals_intermediate.xml
@@ -2,4 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.app.laundry.DealsIntermediateActivity">
+    <item android:title="HOME"
+        android:icon="@drawable/home"
+        app:showAsAction="always"
+        android:id="@+id/direct_to_home"
+        />
 </menu>
