21 September 2015 Needs to work on sign out after Register Half data coming

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,10 @@
         android:textSize="14sp" />
 
     <TextView
+        android:onClick="forget_password"
         android:padding="5dp"
+        android:clickable="true"
+        android:enabled="true"
         android:text="Forgot password?"
         android:textColor="#0000ff"
         android:layout_alignParentRight="true"
